page-turner/tests/compilation_errors.stderr
error: Use #[page_key] attribute to mark a field representing a key
 --> tests/compilation_errors.rs:4:8
  |
4 | struct WithoutKey {
  |        ^^^^^^^^^^

error: Unsupported shape `unit`
  --> tests/compilation_errors.rs:10:24
   |
10 | #[derive(Debug, Clone, PageQuery)]
   |                        ^^^^^^^^^
   |
   = note: this error originates in the derive macro `PageQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `newtype`
  --> tests/compilation_errors.rs:13:24
   |
13 | #[derive(Debug, Clone, PageQuery)]
   |                        ^^^^^^^^^
   |
   = note: this error originates in the derive macro `PageQuery` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `enum`
  --> tests/compilation_errors.rs:16:24
   |
16 | #[derive(Debug, Clone, PageQuery)]
   |                        ^^^^^^^^^
   |
   = note: this error originates in the derive macro `PageQuery` (in Nightly builds, run with -Z macro-backtrace for more info)
